AR chapter written. Closes #26

--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -64,3 +64,65 @@
 	isbn={978-3-030-49698-2}
 }
 
+@article{ghasemi,
+	title = {Deep learning-based object detection in augmented reality: A systematic review},
+	journal = {Computers in Industry},
+	volume = {139},
+	pages = {103661},
+	year = {2022},
+	issn = {0166-3615},
+	doi = {https://doi.org/10.1016/j.compind.2022.103661},
+	url = {https://www.sciencedirect.com/science/article/pii/S0166361522000586},
+	author = {Yalda Ghasemi and Heejin Jeong and Sung Ho Choi and Kyeong-Beom Park and Jae Yeol Lee},
+}
+
+@misc{minaee2022modernaugmentedrealityapplications,
+	title={Modern Augmented Reality: Applications, Trends, and Future Directions}, 
+	author={Shervin Minaee and Xiaodan Liang and Shuicheng Yan},
+	year={2022},
+	eprint={2202.09450},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV},
+	url={https://arxiv.org/abs/2202.09450}, 
+}
+
+@InProceedings{locAR,
+	author={Batuwanthudawa, B.I. and Jayasena, K.P.N},
+	booktitle={2020 2nd International Conference on Advancements in Computing (ICAC)}, 
+	title={Real- Time Location based Augmented Reality Advertising Platform}, 
+	year={2020},
+	volume={1},
+	pages={174-179},
+	keywords={Navigation;Education;Cameras;Real-time systems;Advertising;Augmented reality;Business;Augmented Reality;Advertising Platform;Location based AR;Unity Engine},
+	doi={10.1109/ICAC51239.2020.9357261},
+}
+
+@article{slam,
+	author={Bailey, T. and Durrant-Whyte, H.},
+	journal={IEEE Robotics & Automation Magazine}, 
+	title={Simultaneous localization and mapping (SLAM): part II}, 
+	year={2006},
+	volume={13},
+	number={3},
+	pages={108-117},
+	keywords={Simultaneous localization and mapping;Vehicles;Computational complexity;Computational efficiency;Delay estimation;Uncertainty;Robotics and automation;Mobile robots;Robustness;Bayesian methods},
+	doi={10.1109/MRA.2006.1678144}
+}
+
+@inproceedings{lamp,
+	author = {Kim, Jeongyun and Seo, Jonghoon and Han, Tack-Don},
+	title = {AR Lamp: interactions on projection-based augmented reality for interactive learning},
+	year = {2014},
+	isbn = {9781450321846},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/2557500.2557505},
+	doi = {10.1145/2557500.2557505},
+	abstract = {Today, people use a computer almost everywhere. At the same time, they still do their work in the old-fashioned way, such as using a pen and paper. A pen is often used in many fields because it is easy to use and familiar. On the other hand, however, it is a quite inconvenient because the information printed on paper is static. If digital features are added to this paper environment, the users can do their work more easily and efficiently. AR (augmented reality) Lamp is a stand-type projector and camera embedded system with the form factor of a desk lamp. Its users can modify the virtually augmented content on top of the paper with seamlessly combined virtual and physical worlds. AR is quite appealing, but it is difficult to popularize due to the lack of interaction. In this paper, the interaction methods that people can use easily and intuitively are focused on. A high-fidelity prototype of the system is presented, and a set of novel interactions is demonstrated. A pilot evaluation of the system is also reported to explore its usage possibility.},
+	booktitle = {Proceedings of the 19th International Conference on Intelligent User Interfaces},
+	pages = {353–358},
+	numpages = {6},
+	keywords = {projection-based augmented reality, pen computing, finger gesture, bimanual interaction},
+	location = {Haifa, Israel},
+	series = {IUI '14}
+}
