(Minaee, Liang & Yan, 2022) III. read completely

--- a/thesis/latex/bg.tex
+++ b/thesis/latex/bg.tex
@@ -60,7 +60,7 @@ location is obtained through GPS, sometimes also using a digital compass or
 other sensors.\cite{locAR} Location-based AR softwares typically use 
 Simultaneous Localization and Mapping (SLAM) algorithms  to map the local area, 
 keep track of the user's position within it and show the 
-augmentations.\cite{estrada}\cite{slam}\par
+augmentations.\cite{estrada}\cite{slam}\cite{minaee2022modernaugmentedrealityapplications}\par
 	Another way of achieving markerless AR is known as 
 superimposition-based AR. Here advanced object detection algorithms are used 
 to detect an object from a camera feed and then an augmentation is 
