--- a/thesis/latex/conclusion.tex
+++ b/thesis/latex/conclusion.tex
@@ -1,6 +1,7 @@
 \chapter{Conclusion and summary} \label{conclusion}
 
 \section{Overview of Results} \label{overview}
+\hyperref[rq]{Research questions} should be mentioned here again!
 
 \section{Answering Research Questions} \label{RQ answers}
 
