--- a/thesis/latex/intro.tex
+++ b/thesis/latex/intro.tex
@@ -29,18 +29,23 @@ purpose of this is to learn about the technologies involved in this project,
 to find out what perceived challenges were found by other people working with 
 these technologies and to search for projects similar to ours, conducted by the 
 scientific community. Starting with a literature review should also provide a 
-firm scientific basis to the later phases. \par
+firm scientific basis to the later phases. In this phase we aim to answer 
+\hyperref[rq1]{\textbf{RQ1}}.\par
 	The second phase of the work concerns architecture design and prototype 
 development. All relevant technological challenges found during the literature 
 review are collected to chapter \ref{challenges} for further analysis. Based 
 on all these findings we then propose an architecture for a prototype in 
 chapter \ref{arch}. The prototype is then implemented and the whole 
 development process, the technologies used, as well as anything notable that 
-happens during development is described in chapter \ref{implementation}. \par
+happens during development is described in chapter \ref{implementation}. The 
+goal of this phase is to build an actual prototype and thus answer 
+\hyperref[rq2]{\textbf{RQ2}}.\par
 	The third phase of the work is an empirical usability study conducted 
 on the developed prototype. Here the finished prototype is given out to test 
 subjects to measure how well the system performs. Usability is measured both 
 through asking the opinions of the test subjects through a questionnaire and 
 through measurements made by the prototype software. All the collected data and 
 the questionnaire used can be found in the attachments. This phase of work is 
-more thoroughly described in the chapters \ref{usability} and \ref{feasibility}.
+more thoroughly described in the chapters \ref{usability} and 
+\ref{feasibility}. In this part of the work we aim to answer 
+\hyperref[rq3]{\textbf{RQ3}}.
