--- a/thesis/latex/thesis.tex
+++ b/thesis/latex/thesis.tex
@@ -10,6 +10,9 @@
 \usepackage{float}
 \usepackage[caption=false]{subfig}
 
+% Latex packages added by me
+\usepackage{hyperref}
+
 % Define the algorithm environment
 %\makeatletter
 \providecommand\textquotedblplain{%
