Finished reading (Minaee, Liang & Yan, 2022), CV chapter vázlat & writing done (not counting CSA stuff)

--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -126,3 +126,69 @@
 	location = {Haifa, Israel},
 	series = {IUI '14}
 }
+
+@book{klette2014hv,
+	title = {Concise computer vision},
+	author = {Klette, Reinhard},
+	publisher = {Springer},
+	series = {Undergraduate Topics in Computer Science},
+	edition = {2014},
+	month = {jan},
+	year = {2014},
+	address = {Guildford, England},
+	language = {en}
+}
+
+@inproceedings{zhangFronzNavab,
+	author = {Xiang Zhang and Fronz, S. and Navab, N.},
+	booktitle = {Proceedings. International Symposium on Mixed and Augmented Reality}, 
+	title = {Visual marker detection and decoding in AR systems: a comparative study}, 
+	year = {2002},
+	pages = {97-106},
+	keywords = {Decoding;Augmented reality;Tracking;Calibration;Computer aided manufacturing;Military computing;Computer displays;Cameras;Thyristors;Performance evaluation},
+	doi = {10.1109/ISMAR.2002.1115078}
+}
+
+@misc{opencvHarris,
+	author = {},
+	title = {OpenCV: Harris Corner Detection --- docs.opencv.org},
+	howpublished = {\url{https://docs.opencv.org/4.x/dc/d0d/tutorial_py_features_harris.html}},
+	year = {},
+	note = {[Accessed 27-05-2025]},
+}
+
+@misc{liuziwei7Deepfashion1Poster, 
+	title = {DeepFashion: Powering Robust Clothes Recognition and Retrieval with Rich Annotations},
+	url = {https://liuziwei7.github.io/projects/DeepFashion.html}, 
+	journal = {DeepFashion: Powering robust clothes recognition and retrieval with rich annotations}, 
+	author = {Liu, Ziwei and Luo, Ping and Qiu, Shi and Wang, Xiaogang and Tang, Xiaoou}, 
+	year = {2016}
+} 
+
+@article{hanVitonArxiv,
+	author = {Xintong Han and Zuxuan Wu and Zhe Wu and Ruichi Yu and Larry S. Davis},
+	title = {VITON: An Image-based Virtual Try-on Network},
+	journal = {CoRR},
+	volume = {abs/1711.08447},
+	year = {2017},
+	url = {http://arxiv.org/abs/1711.08447},
+	eprinttype = {arXiv},
+	eprint = {1711.08447},
+	timestamp = {Mon, 09 Dec 2019 13:47:05 +0100},
+	biburl = {https://dblp.org/rec/journals/corr/abs-1711-08447.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{liuMakeupArxiv,
+	author = {Si Liu and Xinyu Ou and Ruihe Qian and Wei Wang and Xiaochun Cao},
+	title = {Makeup like a superstar: Deep Localized Makeup Transfer Network},
+	journal = {CoRR},
+	volume = {abs/1604.07102},
+	year = {2016},
+	url = {http://arxiv.org/abs/1604.07102},
+	eprinttype = {arXiv},
+	eprint = {1604.07102},
+	timestamp = {Thu, 07 Nov 2019 09:05:08 +0100},
+	biburl = {https://dblp.org/rec/journals/corr/LiuOQWC16.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
