--- a/thesis/latex/intro.tex
+++ b/thesis/latex/intro.tex
@@ -2,7 +2,7 @@
 
 \section{The goals of this thesis} \label{goals}
 This thesis aims to design and implement a system that integrates a backend 
-powered computer vision with an Augmented Reality (AR) interface. The concept 
+powered computer vision (CV) with an Augmented Reality (AR) interface. The concept 
 involves a device capturing an image feed through its camera, which is then 
 transmitted to a processing unit. Here, computer vision algorithms analyze 
 the data to extract meaningful information, which is subsequently sent to the 
