Minor wording revision in 4.1

--- a/thesis/latex/arch-description.tex
+++ b/thesis/latex/arch-description.tex
@@ -5,13 +5,12 @@
 The main goal of this thesis is to develop an application which aims to use a 
 modern CV and DL-based tracking solution in an AR application. This is first 
 defined in \hyperref[rq2]{\textbf{RQ2}}. Here we further define the needs of 
-this prototype. The aim of this thesis is to build an application that would 
-guide the user through the preparation of a single recipe. The goal would be 
-to offer real-time guidance for all the actions involved in making the chosen 
-dish. AR-augmentations would need to be created for each of the actions 
-involved. Examples of these actions are for example adding ingredients to 
-pots, handling kitchen appliances, peeling and chopping ingredients and 
-waiting for cooking times. \par
+this prototype. The aim of this prototype is to guide the user through the 
+preparation of a single recipe. The goal would be to offer real-time guidance 
+for all the actions involved in making the chosen dish. AR-augmentations 
+would need to be created for each of the actions involved. Examples of these 
+actions are for example adding ingredients to pots, handling kitchen 
+appliances, peeling and chopping ingredients and waiting for cooking times. \par
 	There is a case to be made here for using more advanced CV and 
 DL-based methods for tracking. Most obvious among these is the simple fact 
 that there are lots of things to track. Just in the case of a simple pasta 
