Updated skeleton for 4. Invented structure for 5. Changes in template: added packages listigs and xcolor, defined custom listing style. Added listing in 5.1. Written prototype description into 4.1. Closes #29

--- a/thesis/latex/arch-description.tex
+++ b/thesis/latex/arch-description.tex
@@ -26,12 +26,18 @@ advanced CV-methods in tracking is justified. In \ref{protos} we also see
 prototypes developed by other teams using a similar step-by-step tutorial 
 format for their AR-content. Both \textcite{pylvanainen} and 
 \textcite{reyesEtAl2016} use this kind of approach to teach instrument use in 
-laboratories. But their applications use traditional tracking methods that 
+laboratories, but their applications use traditional tracking methods that 
 are developed for their specific instruments. If an easily retrainable modern 
 CV-based tracking method is used, one could theoretically take the cooking 
-app developed for this prototype, retrain the tracking module and use it with 
+app developed for this thesis, retrain the tracking module, and use it with 
 any step-by-step tutorial, making the potential of this sort of application 
-huge.
+huge. \par
+	The application developed for this thesis aims to guide the user 
+through the recipe defined in listing \ref{recipelisting}. In it Computer 
+Vision is used to track bowls, spoons, knives, apples, oranges and bananas. 
+In chapter \ref{usability} the application will be used to conduct a usability 
+test, where subjects are asked to prepare the recipe with the help of the 
+application and their user experience is measured by a survey. \par
 
 \section{Perceived Challenges} \label{challenges}
 
