--- a/thesis/latex/implementation.tex
+++ b/thesis/latex/implementation.tex
@@ -1,2 +1,26 @@
-\chapter{(IMPLEMENTING AN ARCHITECTURE FOR A SOFTWARE SYSTEM WITH AR AND CV)} 
-\label{implementation}
+\chapter{Implementation process}\label{implementation}
+
+\section{Defining the recipe}\label{recipe}
+\begin{lstlisting}[caption=The recipe,captionpos=b,label=recipelisting]
+Chop apples with a knife
+Place apples to bowl
+Chop oranges with a knife
+Place oranges to bowl
+Chop bananas with a knife
+Place bananas to bowl
+Stir apples, oranges and bananas in a bowl with a spoon
+\end{lstlisting}
+
+\section{Collecting the data}\label{data}
+Describe data here
+
+\section{Training the CV module}\label{training}
+Describe CV module here
+
+\section{Application backend}\label{backend}
+\begin{itemize}
+	\item How is the CV module integrated into the mobile app?
+	\item How does the app track the steps of the recipe
+\end{itemize}
+
+\section{AR-UI}\label{ar-ui}
