--- a/thesis/latex/thesis.tex
+++ b/thesis/latex/thesis.tex
@@ -12,6 +12,17 @@
 
 % Latex packages added by me
 \usepackage{hyperref}
+\usepackage{listings}
+\usepackage{xcolor}
+
+% Customizing listing style
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+	backgroundcolor=\color{backcolour}
+}
+
+\lstset{style=mystyle}
 
 % Define the algorithm environment
 %\makeatletter
