Finished writing 4.1. Began writing 4.2. Closes #32.

--- a/thesis/latex/arch-description.tex
+++ b/thesis/latex/arch-description.tex
@@ -38,14 +38,19 @@ Vision is used to track bowls, spoons, knives, apples, oranges and bananas.
 In chapter \ref{usability} the application will be used to conduct a usability 
 test, where subjects are asked to prepare the recipe with the help of the 
 application and their user experience is measured by a survey. \par
+	In order for the prorotype to be usable in a kitchen environment it 
+needs to be able to run on a mobile phone. However the prototype has to be 
+easily portable to other platforms in the future. For this reason it will be 
+developed as a web app. Testing the application will be performed on a mobile 
+device.
 
 \section{Perceived Challenges} \label{challenges}
 
-\begin{itemize}
-	\item{Do this based on \ref{Literature review}}
-	\item{Mention challenges encountered by others & possible solutions if needed}
-	\item{Add as many subsections as needed}
-\end{itemize}
+The first challenge in building the prototype is defining a recipe and 
+deciding what to track. If there are too many things to track the complexity 
+increases beyond the scope of a thesis. However if there are not enough 
+things to track then the prototype will fail to demonstrate the potential of 
+CV and AR in solving real world problems and thus be useless.
 
 \section{Proposed Architecture} \label{arch}
 
