--- a/thesis/latex/intro.tex
+++ b/thesis/latex/intro.tex
@@ -1,13 +1,13 @@
 \chapter{Introduction} \label{intro}
 
 \section{The goals of this thesis} \label{goals}
-This thesis aims to design and implement a system that integrates a backend 
-powered computer vision (CV) with an Augmented Reality (AR) interface. The concept 
-involves a device capturing an image feed through its camera, which is then 
-transmitted to a processing unit. Here, computer vision algorithms analyze 
-the data to extract meaningful information, which is subsequently sent to the 
-AR interface to give feedback to user. In this thesis, I document the journey 
-of developing this system and assess its performance.
+This thesis explores the usability and functionalities of an Augmented Reality 
+(AR) experience and its interoperability with modern Deep Learning (DL) based 
+computer vision (CV). This is explored with a prototype, where a camera is 
+used to capture an image feed, information is extracted from it using 
+CV-algorithms and finally AR is used to communicate this information with the 
+user. This thesis explores the creation of such a system and examines its 
+usability and potential real-world usefulness.
 
 \section{Research Questions} \label{rq}
 The thesis aims to answer the following Research Questions:
